# persona-kdb

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
persona-kdb/: scenario.py
persona-kdb/core/: __init__.py  chatbot.py  llms.py  vectordb.py
persona-kdb/kdb/: __init__.py  persona.py
persona_kdb/: __init__.py  app.py  scenario.py
persona_kdb/api/: db.py  enums.py  models.py  scheduler.py  schema.py  utils.py
persona_kdb/api/routes/: onepager.py  v1.py  v2.py
persona_kdb/components/core/: (deprecated)memory.py  (deprecated)vectordb.py  __init__.py  assistant.py  chatbot.py  llms.py  tools.py  vectordb.py
persona_kdb/components/kdb/: __init__.py  firebase.py
persona_kdb/components/kdb/gsheet/: __init__.py  chat_history.py  persona.py  spreadsheet_utils.py  trainable_data.py  types.py
persona_kdb/components/msg_queue/: consumer.py  models.py  producer.py
